Correction of z-index in carousel inner

--- a/src/sass/components/_brands-carousel.scss
+++ b/src/sass/components/_brands-carousel.scss
@@ -1,5 +1,4 @@
 .carousel-inner {
-  z-index: -1;
   width: 150%;
   margin-left: -6vw;
 
